# sand-game

./: .gitignore  README.md  package.json
crate/: Cargo.toml
crate/src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.json
web/sim-logs/: ecosystem.json  hourglass.json  lava-lamp.json  rain-machine.json  water-cycle.json
web/src/: main.ts  renderer.ts  scenarios.sim.test.ts  scenarios.test.ts  scenarios.ts  style.css  types.ts  ui.ts
