[package]
name = "sand-sim"
version = "0.1.0"
edition = "2021"
description = "Cellular automata particle simulation for the falling sand game"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
